--- a/index.html
+++ b/index.html
@@ -1,44 +1,145 @@
+<!-- =============================================
+Mirle 尾牙主題 Landing Page  (Single‑Page Version)
+Tailwind CDN 版  v1.0  |  2025‑07‑31
+================================================-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mirle Theme Proposal</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>2026 Mirle 尾牙主題建議</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    html { scroll-behavior: smooth; }
+    /* 簡約底線 */
+    .underline-title { position: relative; padding-bottom: 8px; }
+    .underline-title::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 50px;
+      height: 3px;
+      background-color: #4f46e5; /* Indigo color */
+    }
+  </style>
 </head>
-<body class="bg-gray-100">
-    <header class="bg-white shadow">
-        <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
-            <h1 class="text-3xl font-bold text-gray-900">Mirle Theme Proposal</h1>
+<body class="bg-gray-50 font-sans text-gray-800">
+  <!-- Confetti JS (保留慶祝氛圍) -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+  <script>window.addEventListener('load',()=>{setTimeout(()=>{confetti({spread:90,particleCount:100,origin:{y:0.2}});},800);});</script>
+
+  <!-- HERO -->
+  <section class="relative w-full overflow-hidden bg-gray-200">
+    <img src="image/Landing Hero.png" alt="Mirle Hero" class="w-full h-[50vh] object-cover opacity-40" />
+    <div class="absolute inset-0 flex flex-col items-center justify-center text-center text-gray-800 px-4">
+      <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-2 text-indigo-800">2026 Mirle 尾牙主題建議</h1>
+      <p class="text-sm opacity-80">*此為初步概念方案，最終細節與預算將於正式提案階段確認*</p>
+    </div>
+  </section>
+
+  <!-- 主題卡區 -->
+  <section class="container mx-auto px-4 py-16 grid gap-8 md:grid-cols-2">
+    <!-- theme card component -->
+    <a href="#ai-odyssey" class="group block rounded-lg border border-gray-200 bg-white p-6 shadow-md hover:shadow-xl hover:-translate-y-1 transition duration-300">
+      <div class="flex items-center gap-4">
+        <img src="image/theme1.png" class="h-16 w-16 rounded-md object-cover" alt="AI Odyssey thumb" />
+        <div>
+          <h2 class="text-xl font-semibold text-indigo-700">智動星航 · AI Odyssey</h2>
+          <p class="text-sm text-gray-600">向星際啟航 · 智動領航</p>
         </div>
-    </header>
-    <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 lg:mt-16 lg:px-8">
-        <div class="text-center">
-            <h2 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
-                Welcome to the Future of Exhibitions
-            </h2>
-            <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg md:mt-5 md:text-xl">
-                Explore our upcoming themes below.
-            </p>
-        </div>
-        <div class="mt-10 grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-4">
-            <div class="bg-white p-6 rounded-lg shadow">
-                <h3 class="text-lg leading-6 font-medium text-gray-900">AI Odyssey</h3>
-                <p class="mt-2 text-sm text-gray-500">Placeholder description for AI Odyssey.</p>
-            </div>
-            <div class="bg-white p-6 rounded-lg shadow">
-                <h3 class="text-lg leading-6 font-medium text-gray-900">Green Tomorrow</h3>
-                <p class="mt-2 text-sm text-gray-500">Placeholder description for Green Tomorrow.</p>
-            </div>
-            <div class="bg-white p-6 rounded-lg shadow">
-                <h3 class="text-lg leading-6 font-medium text-gray-900">Next Stage</h3>
-                <p class="mt-2 text-sm text-gray-500">Placeholder description for Next Stage.</p>
-            </div>
-            <div class="bg-white p-6 rounded-lg shadow">
-                <h3 class="text-lg leading-6 font-medium text-gray-900">Funtech Carnival</h3>
-                <p class="mt-2 text-sm text-gray-500">Placeholder description for Funtech Carnival.</p>
-            </div>
-        </div>
-    </main>
+      </div>
+    </a>
+    <a href="#green-tomorrow" class="group block rounded-lg border border-gray-200 bg-white p-6 shadow-md hover:shadow-xl hover:-translate-y-1 transition duration-300">
+      <div class="flex items-center gap-4"><img src="image/theme2.png" class="h-16 w-16 rounded-md object-cover" alt="Green Tomorrow thumb" /><div><h2 class="text-xl font-semibold text-green-700">永續綠洲 · Green Tomorrow</h2><p class="text-sm text-gray-600">綠動未來 · 永續啟程</p></div></div>
+    </a>
+    <a href="#next-stage" class="group block rounded-lg border border-gray-200 bg-white p-6 shadow-md hover:shadow-xl hover:-translate-y-1 transition duration-300">
+      <div class="flex items-center gap-4"><img src="image/theme3.png" class="h-16 w-16 rounded-md object-cover" alt="Next Stage thumb" /><div><h2 class="text-xl font-semibold text-blue-700">Mirle Next Stage</h2><p class="text-sm text-gray-600">登台世界 · 秀出 Mirle</p></div></div>
+    </a>
+    <a href="#funtech-carnival" class="group block rounded-lg border border-gray-200 bg-white p-6 shadow-md hover:shadow-xl hover:-translate-y-1 transition duration-300">
+      <div class="flex items-center gap-4"><img src="image/theme4.png" class="h-16 w-16 rounded-md object-cover" alt="FunTech Carnival thumb" /><div><h2 class="text-xl font-semibold text-orange-700">跨域遊樂園 · FunTech Carnival</h2><p class="text-sm text-gray-600">玩轉科技 · 樂享未來</p></div></div>
+    </a>
+  </section>
+
+  <!-- ================== 主題 Sections ================== -->
+  <section id="ai-odyssey" class="py-16 bg-white border-t border-gray-200">
+    <div class="container mx-auto px-4 space-y-8">
+      <h2 class="underline-title text-3xl md:text-4xl font-bold text-indigo-800">智動星航 · AI Odyssey</h2>
+      <img src="image/theme1.png" class="w-full rounded-lg shadow-lg h-auto md:h-[400px] object-cover" alt="AI Odyssey banner" />
+      <div class="grid md:grid-cols-2 gap-6 text-gray-600 md:text-base">
+        <div><h3 class="font-semibold text-gray-800 mb-1">活動精神</h3><p>智慧自動化、探索未知、產業領航</p></div>
+        <div><h3 class="font-semibold text-gray-800 mb-1">場域體驗</h3><p>星艦艙門迎賓、AR 星圖互動、員工化身太空人</p></div>
+      </div>
+      <div class="grid md:grid-cols-3 gap-6">
+        <div class="border-l-4 border-indigo-500 pl-4"><h4 class="font-semibold text-indigo-700 md:text-lg">星艦光雕啟動</h4><p class="text-sm md:text-base text-gray-600">LED Mapping + 引擎點火特效</p></div>
+        <div class="border-l-4 border-indigo-500 pl-4"><h4 class="font-semibold text-indigo-700 md:text-lg">AR 星圖尋寶</h4><p class="text-sm md:text-base text-gray-600">手機掃描探索星雲，抽獎互動</p></div>
+        <div class="border-l-4 border-indigo-500 pl-4"><h4 class="font-semibold text-indigo-700 md:text-lg">AI 調酒機秀</h4><p class="text-sm md:text-base text-gray-600">機械臂現場調製發光飲品</p></div>
+      </div>
+    </div>
+  </section>
+
+  <section id="green-tomorrow" class="py-16 bg-gray-50 border-t border-gray-200">
+    <div class="container mx-auto px-4 space-y-8">
+      <h2 class="underline-title text-3xl md:text-4xl font-bold text-green-800" style="--after-bg-color: #16a34a;">永續綠洲 · Green Tomorrow</h2>
+      <img src="image/theme2.png" class="w-full rounded-lg shadow-lg h-auto md:h-[400px] object-cover" alt="Green Tomorrow banner" />
+      <div class="grid md:grid-cols-2 gap-6 text-gray-600 md:text-base">
+        <div><h3 class="font-semibold text-gray-800 mb-1">活動精神</h3><p>淨零碳、永續創新、守護未來</p></div>
+        <div><h3 class="font-semibold text-gray-800 mb-1">場域體驗</h3><p>室內森林光影、互動植樹、綠能藝術</p></div>
+      </div>
+      <div class="grid md:grid-cols-3 gap-6">
+        <div class="border-l-4 border-green-500 pl-4"><h4 class="font-semibold text-green-700 md:text-lg">種子點亮儀式</h4><p class="text-sm md:text-base text-gray-600">光纖沙漏匯成綠芽</p></div>
+        <div class="border-l-4 border-green-500 pl-4"><h4 class="font-semibold text-green-700 md:text-lg">能量單車牆</h4><p class="text-sm md:text-base text-gray-600">踩踏發電點亮碳足跡</p></div>
+        <div class="border-l-4 border-green-500 pl-4"><h4 class="font-semibold text-green-700 md:text-lg">再生材料 DIY</h4><p class="text-sm md:text-base text-gray-600">綠色紀念品工作坊</p></div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ================= Next Stage ================= -->
+  <section id="next-stage" class="py-16 bg-white border-t border-gray-200">
+    <div class="container mx-auto px-4 space-y-8">
+      <h2 class="underline-title text-3xl md:text-4xl font-bold text-blue-800" style="--after-bg-color: #2563eb;">Mirle Next Stage</h2>
+      <img src="image/theme3.png" class="w-full rounded-lg shadow-lg h-auto md:h-[400px] object-cover" alt="Next Stage banner" />
+      <div class="grid md:grid-cols-2 gap-6 text-gray-600 md:text-base">
+        <div><h3 class="font-semibold text-gray-800 mb-1">活動精神</h3><p>國際化、舞台主角、開創新局</p></div>
+        <div><h3 class="font-semibold text-gray-800 mb-1">場域體驗</h3><p>LED Runway、主管走秀、全球地標投影</p></div>
+      </div>
+      <div class="grid md:grid-cols-3 gap-6">
+        <div class="border-l-4 border-blue-500 pl-4"><h4 class="font-semibold text-blue-700 md:text-lg">LED Runway 光束開場</h4><p class="text-sm md:text-base text-gray-600">T 型台結合光束節拍</p></div>
+        <div class="border-l-4 border-blue-500 pl-4"><h4 class="font-semibold text-blue-700 md:text-lg">多國節奏秀</h4><p class="text-sm md:text-base text-gray-600">融合五大洲音樂舞蹈</p></div>
+        <div class="border-l-4 border-blue-500 pl-4"><h4 class="font-semibold text-blue-700 md:text-lg">城市投影留言牆</h4><p class="text-sm md:text-base text-gray-600">員工祝福即時上牆</p></div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ================ FunTech Carnival ================ -->
+  <section id="funtech-carnival" class="py-16 bg-gray-50 border-t border-gray-200">
+    <div class="container mx-auto px-4 space-y-8">
+      <h2 class="underline-title text-3xl md:text-4xl font-bold text-orange-800" style="--after-bg-color: #f97316;">跨域遊樂園 · FunTech Carnival</h2>
+      <img src="image/theme4.png" class="w-full rounded-lg shadow-lg h-auto md:h-[400px] object-cover" alt="FunTech Carnival banner" />
+      <div class="grid md:grid-cols-2 gap-6 text-gray-600 md:text-base">
+        <div><h3 class="font-semibold text-gray-800 mb-1">活動精神</h3><p>科技趣味、活力團隊、創意無限</p></div>
+        <div><h3 class="font-semibold text-gray-800 mb-1">場域體驗</h3><p>戶外 AI 遊戲攤位、室內樂園拱門舞台</p></div>
+      </div>
+      <div class="grid md:grid-cols-3 gap-6">
+        <div class="border-l-4 border-orange-500 pl-4"><h4 class="font-semibold text-orange-700 md:text-lg">AI 互動攤位 ×4</h4><p class="text-sm md:text-base text-gray-600">射擊 / 情緒相機 / VR / 智慧投籃</p></div>
+        <div class="border-l-4 border-orange-500 pl-4"><h4 class="font-semibold text-orange-700 md:text-lg">樂園拱門舞台</h4><p class="text-sm md:text-base text-gray-600">氣球霓虹門迎賓</p></div>
+        <div class="border-l-4 border-orange-500 pl-4"><h4 class="font-semibold text-orange-700 md:text-lg">票券積分 WebApp</h4><p class="text-sm md:text-base text-gray-600">掃碼集點、抽獎</p></div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact & Logo -->
+  <section class="container mx-auto px-4 py-16">
+    <div class="flex flex-col items-center gap-4 rounded-lg border border-gray-200 bg-white p-8 text-center shadow-md">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-indigo-600" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m-18 8h18a2 2 0 002-2V6a2 2 0 00-2-2H3a2 2 0 00-2 2v8a2 2 0 002 2z" /></svg>
+      <p class="text-sm text-gray-600">如對主題有任何建議，歡迎 Email 至 <a href="mailto:service@century.com.tw" class="text-indigo-600 hover:underline">service@century.com.tw</a></p>
+      <img src="image/Century LOGO-190418.png" alt="Century Logo" class="h-8 mt-4" />
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="py-8 text-center text-xs text-gray-500">
+    © 2025 Century Event Concept Proposal
+  </footer>
 </body>
 </html>
