--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Tailwind CDN 版  v1.0  |  2025‑07‑31
   <section class="container mx-auto px-4 py-16">
     <div class="flex flex-col items-center gap-4 rounded-lg border border-gray-200 bg-white p-8 text-center shadow-md">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-indigo-600" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m-18 8h18a2 2 0 002-2V6a2 2 0 00-2-2H3a2 2 0 00-2 2v8a2 2 0 002 2z" /></svg>
-      <p class="text-sm text-gray-600">如對主題有任何建議，歡迎 Email 至 <a href="mailto:service@century.com.tw" class="text-indigo-600 hover:underline">service@century.com.tw</a></p>
+      <p class="text-sm text-gray-600">如對主題有任何建議，歡迎 Email 至 <a href="mailto:century@icpc.com.tw" class="text-indigo-600 hover:underline">century@icpc.com.tw</a></p>
       <img src="image/Century LOGO-190418.png" alt="Century Logo" class="h-8 mt-4" />
     </div>
   </section>
