Add Cloudflare Web Analytics snippet

--- a/index.html
+++ b/index.html
@@ -141,5 +141,8 @@ Tailwind CDN 版  v1.0  |  2025‑07‑31
   <footer class="py-8 text-center text-xs text-gray-500">
     © 2025 Century Event Concept Proposal
   </footer>
+  <!-- Cloudflare Web Analytics -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "f6979aed9ddf498088a17f6e276f6b00"}'></script>
+  <!-- End Cloudflare Web Analytics -->
 </body>
 </html>
